updating github actions

--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -14,6 +14,12 @@ inputs:
   domain:
     description: "PythonAnywhere domain"
     required: true
+  deploy_secret:
+    description: "Deploy security secret"
+    required: true
+  deploy_url:
+    description: "Deploy API url"
+    required: true
 
 runs:
   using: "composite"
