--- a/.github/actions/deploy/action.yml
+++ b/.github/actions/deploy/action.yml
@@ -27,10 +27,10 @@ runs:
     - name: Trigger deploy endpoint
       shell: bash
       run: |
-        curl -X POST ${{ inputs.domain }} -H "Authorization: ${{ inputs.deploy_secret }}"
+        curl -X POST ${{ inputs.domain }} -H "Authorization: Bearer ${{ inputs.deploy_secret }}"
 
     - name: Reload app via PythonAnywhere API
       shell: bash
       run: |
         curl -X POST https://www.pythonanywhere.com/api/v0/user/${{ inputs.username }}/webapps/${{ inputs.domain }}/reload/ \
-          -H "Authorization: Token ${{ inputs.api_token }}"
+          -H "Authorization: ${{ inputs.api_token }}"
